place/vplace manipulation inside spec (and akka glue)